cif/org.eclipse.escet.cif.tests/tests/checks/CompNoInitPredsCheckNonTrivialInitPreds.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  ------------------------------------------------
  (1/1) Component has an initialization predicate.
  ------------------------------------------------
   * In group "g_nontrivial":
     - initial b;
               ^
   * In automaton definition "g_nontrivial.A":
     - initial b;
               ^
   * In group definition "g_nontrivial.G":
     - initial b;
               ^
   * In automaton "g_nontrivial.a":
     - initial b;
               ^
